v1.7.2:
   - [Build] Fix building without window mode enabled.
   - [Config] Do not print out the 'theme' field in configuration on dump.
   - [CI] test window mode less build.

v1.7.1: Turtley amazing!
   - [Theme] Fix highlight with only theme.
   - Updated documentation and landing page (Thanks to RaZ0rr-Two)
   - [Combi] Fix nesting combi modi (#1510)
   - [DMenu] Fix crash dmenu mode when no entry is available. (#1504)
   - [Run|Drun] Only initialize file-completer on first use.
   - [FileBrowser] Reduce number of re-allocs.
   - [Readme] Remove generating readme.html for dist.
   - [Dmenu] Fix uninitialized memory (non-selectable)
   - [FileBrowser] Try to convert invalid encoded text. (#1471)
   - [FileBrowser] Don't crash on invalid file filenames. (#1471)
   - [Theme] print known colors as its color name.
   - [CMD] If failed to convert commandline to new option, do not stop. (#1425)
   - [Theme] Fix parsing of nested media blocks. (#1442)
   - [Widgets] Fix sizing logic widgets. (#1437)
   - [Window] Try to fix auto-sizing of desktop names for non-i3 desktops. (#1439)
   - [Window] Fix broken close-on-delete. (#1421)
   - [Listview] Correctly check if selected item is highlighted. (#1423)
   - [Entry] Allow action to be taken on input change. (#1405)
   - [Theme] Don't truncate double values. (#1419)
   - [Grammar] Add support for env(ENV,default).
   - [Documentation] documentation fixes.
   - [Theme] fix dmenu theme ( #1396).

v1.7.0: Iggy 2024
   - ADD: -steal-focus option.
   - ADD: [Config] Add nested configuration option support.
   - ADD: [Config] Support for handling dynamic config options.
   - ADD: [IconFetcher] Find images shipped with the theme.
   - ADD: [DRun] Add support for passing file (using file-browser) completer for desktop files that support his.
   - ADD: [DRun] Support for service files.
   - ADD: [FileBrowser] Allow setting startup directory (#1325)
   - ADD: [FileBrowser]: Add sorting-method. (#1340)